--- a/test1/1.html
+++ b/test1/1.html
@@ -1,8 +1,14 @@
-<title>web - html</title>
+<!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8">
-<ol><li>인사말</li>
-<li>심화과정</li>
-<li>응용과정</li></ol>
+<title>배우고 있어요 뿌우ㅜ</title>
+</head>
+<body>
+<h1><a href="index.html">시험품</a></h1>
+<ol><li><a href="1.html">배우고 있는거 집합</a></li>
+<li><a href="2.html">심화과정</a></li>
+<li><a href="3.html">응용과정</a></li></ol>
 <ul><li>저기요</li>
 <li>제가왜</li>
 <li>이런짓 해야되죠?</li></ul>
@@ -10,4 +16,5 @@
 <p>Winter is coming soon. <strong>Do you all have a <u>plan</u>?</strong></p><p>I entered university this time, so I'm studying coding.</p><p>The html was easy, but the other one was a little difficult. I have a lot to memorize...</p>
 <p style="margin-top:45px;"><strong><span style="font-size:25px;">아무일도 없었어</span></strong></p><p><span style="font-size:16px;">진짜로...</p>
 <a href="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png" target="_blank" title="이 코딩 사진만 따로 보기"><img src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png">
-  </a>
+  </a></body>
+  </html>
