--- a/2.html
+++ b/2.html
@@ -9,5 +9,7 @@
 <ol><li><a href="1.html">배우고 있는거 집합</a></li>
 <li><a href="2.html">심화과정</a></li>
 <li><a href="3.html">응용과정</a></li></ol>
-자.. 잠시만 기다려봐 나 아직 준비가 ㄷㄷ;;</body>
+<p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" frameborder="0" allowfullscreen></iframe>
+</p></body>
   </html>
